--- a/i18n/en.json
+++ b/i18n/en.json
@@ -452,7 +452,7 @@
   "clear_all_recent_searches": "Clear all recent searches",
   "clear_message": "Clear message",
   "clear_value": "Clear value",
-  "clockwise": "Сlockwise",
+  "clockwise": "Clockwise",
   "close": "Close",
   "collapse": "Collapse",
   "collapse_all": "Collapse all",
@@ -882,6 +882,7 @@
   "no_results_description": "Try a synonym or more general keyword",
   "no_shared_albums_message": "Create an album to share photos and videos with people in your network",
   "not_in_any_album": "Not in any album",
+  "not_published": "NotPublished",
   "note_apply_storage_label_to_previously_uploaded assets": "Note: To apply the Storage Label to previously uploaded assets, run the",
   "note_unlimited_quota": "Note: Enter 0 for unlimited quota",
   "notes": "Notes",
@@ -972,6 +973,7 @@
   "profile_picture_set": "Profile picture set.",
   "public_album": "Public album",
   "public_share": "Public Share",
+  "published": "Published",
   "purchase_account_info": "Supporter",
   "purchase_activated_subtitle": "Thank you for supporting Immich and open-source software",
   "purchase_activated_time": "Activated on {date, date}",
